--- a/config.json
+++ b/config.json
@@ -1,20 +1,20 @@
 {
-  "strength_preset": "high",
+  "strength_preset": "low",
   "output_preset": "high_quality",
   "export_dpi": 400,
   "processing_mode": "pure_bw",
-  "threshold": 220,
+  "threshold": 200,
   "auto_threshold_method": "none",
   "auto_contrast": false,
-  "contrast_factor": 1.123931623931624,
+  "contrast_factor": 1.4238095238095239,
   "highlight_removal": {
     "enabled": true,
-    "saturation_threshold": 40,
-    "value_threshold": 80
+    "saturation_threshold": 80,
+    "value_threshold": 140
   },
   "gray_suppression": {
-    "enabled": true,
-    "intensity": 0.7
+    "enabled": false,
+    "intensity": 0.0
   },
   "output_format": "png",
   "jpeg_quality": 90,
